<resources>
    <string name="app_name">LeylaBanchaewa-pset1</string>
    <string name="action_settings">Settings</string>
    <string name="body">Body</string>
    <string name="bodyglasses">Glasses</string>
    <string name="arms">Arms</string>
    <string name="mouth">Mouth</string>
    <string name="hat">Hat</string>
    <string name="glasses">Glasses</string>
    <string name="moustache">Moustache</string>
    <string name="eyebrows">Eyebrows</string>
    <string name="ears">Ears</string>
    <string name="nose">Nose</string>
    <string name="eyes">Eyes</string>
    <string name="shoes">Shoes</string>
    <string name="title">Mr. Potatohead</string>
</resources>
