<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bliss.omgandroid.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none|textPersonName"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="266dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/body"
                app:srcCompat="@drawable/body" />

            <ImageView
                android:id="@+id/Arms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/arms"
                app:srcCompat="@drawable/arms" />

            <ImageView
                android:id="@+id/Shoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/shoes"
                app:srcCompat="@drawable/shoes" />

            <ImageView
                android:id="@+id/Ears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ears"
                app:srcCompat="@drawable/ears" />

            <ImageView
                android:id="@+id/Hat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hat"
                app:srcCompat="@drawable/hat" />

            <ImageView
                android:id="@+id/Eyes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/eyes"
                app:srcCompat="@drawable/eyes" />

            <ImageView
                android:id="@+id/Eyebrows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/eyebrows"
                app:srcCompat="@drawable/eyebrows" />

            <ImageView
                android:id="@+id/Glasses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/glasses"
                app:srcCompat="@drawable/glasses" />

            <ImageView
                android:id="@+id/Mouth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/mouth"
                app:srcCompat="@drawable/mouth" />

            <ImageView
                android:id="@+id/Moustache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/moustache"
                app:srcCompat="@drawable/mustache" />

            <ImageView
                android:id="@+id/Nose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nose"
                app:srcCompat="@drawable/nose" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="401dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="59dp">

                <CheckBox
                    android:id="@+id/cbEyes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eyes"
                    android:checked="true"
                    android:onClick="onCheckboxClicked" />

                <CheckBox
                    android:id="@+id/cbNose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nose"
                    android:checked="true"
                    android:onClick="onCheckboxClicked" />

                <CheckBox
                    android:id="@+id/cbMouth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mouth"
                    android:checked="true"
                    android:onClick="onCheckboxClicked" />

                <CheckBox
                    android:id="@+id/cbEars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ears"
                    android:checked="true"
                    android:onClick="onCheckboxClicked" />

                <CheckBox
                    android:id="@+id/cbEyebrows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/eyebrows"
                    android:onClick="onCheckboxClicked" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="207dp"
                tools:layout_editor_absoluteY="351dp">

                <CheckBox
                    android:id="@+id/cbArms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arms"
                    android:checked="true"
                    android:onClick="onCheckboxClicked" />

                <CheckBox
                    android:id="@+id/cbMoustache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moustache"
                    android:checked="true"
                    android:onClick="onCheckboxClicked" />

                <CheckBox
                    android:id="@+id/cbGlasses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/glasses"
                    android:checked="true"
                    android:onClick="onCheckboxClicked" />

                <CheckBox
                    android:id="@+id/cbHat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hat"
                    android:checked="true"
                    android:onClick="onCheckboxClicked" />

                <CheckBox
                    android:id="@+id/cbShoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoes"
                    android:checked="true"
                    android:onClick="onCheckboxClicked" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
